# controllers/asignacion.go
@@ -2,7 +2,10 @@ package controllers
 
 import (
 	"github.com/astaxie/beego"
+	"github.com/astaxie/beego/logs"
+	"github.com/udistrital/sga_plan_trabajo_docente_mid/services"
 	"github.com/udistrital/utils_oas/errorhandler"
+	requestmanager "github.com/udistrital/utils_oas/requestresponse"
 )
 
 // AsignacionController operations for Asignacion
@@ -26,6 +29,17 @@ func (c *AsignacionController) URLMapping() {
 func (c *AsignacionController) Asignacion() {
 	defer errorhandler.HandlePanic(&c.Controller)
 
+	vigencia := c.GetString("vigencia")
+
+	if vigencia == "" {
+		logs.Error(vigencia)
+		c.Data["json"] = requestmanager.APIResponseDTO(false, 400, nil, "Error: Parametro(s) Valores nó validos")
+	} else {
+		resultado := services.ListaAsignacion(vigencia)
+		c.Data["json"] = resultado
+		c.Ctx.Output.SetStatus(resultado.Status)
+	}
+
 	c.ServeJSON()
 }
 
@@ -39,6 +53,18 @@ func (c *AsignacionController) Asignacion() {
 // @router /docente [get]
 func (c *AsignacionController) AsignacionDocente() {
 	defer errorhandler.HandlePanic(&c.Controller)
+
+	docente := c.GetString("docente")
+	vigencia := c.GetString("vigencia")
+
+	if docente == "" || vigencia == "" {
+		logs.Error(docente, vigencia)
+		c.Data["json"] = requestmanager.APIResponseDTO(false, 400, nil, "Error: Parametro(s) Valores nó validos")
+	} else {
+		resultado := services.ListaAsignacionDocente(docente, vigencia)
+		c.Data["json"] = resultado
+		c.Ctx.Output.SetStatus(resultado.Status)
+	}
 
 	c.ServeJSON()
 }
