# controllers/docente.go
@@ -2,7 +2,10 @@ package controllers
 
 import (
 	"github.com/astaxie/beego"
+	"github.com/astaxie/beego/logs"
+	"github.com/udistrital/sga_plan_trabajo_docente_mid/services"
 	"github.com/udistrital/utils_oas/errorhandler"
+	requestmanager "github.com/udistrital/utils_oas/requestresponse"
 )
 
 // DocenteController operations for Asignacion
@@ -27,6 +30,23 @@ func (c *DocenteController) URLMapping() {
 func (c *DocenteController) DocumentoDocenteVinculacion() {
 	defer errorhandler.HandlePanic(&c.Controller)
 
+	documento := c.GetString("documento")
+	vinculacion, errvin := c.GetInt64("vinculacion")
+
+	if errvin != nil {
+		logs.Error(errvin)
+		c.Data["json"] = requestmanager.APIResponseDTO(false, 400, nil, "Error: Parametro(s) nó valido(s) o faltante(s)")
+		c.Ctx.Output.SetStatus(400)
+	} else if documento == "" || vinculacion <= 0 {
+		logs.Error(documento, vinculacion)
+		c.Data["json"] = requestmanager.APIResponseDTO(false, 400, nil, "Error: Parametro(s) Valores nó validos")
+		c.Ctx.Output.SetStatus(400)
+	} else {
+		resultado := services.ListaDocentesxDocumentoVinculacion(documento, vinculacion)
+		c.Data["json"] = resultado
+		c.Ctx.Output.SetStatus(resultado.Status)
+	}
+
 	c.ServeJSON()
 }
 
@@ -40,6 +60,23 @@ func (c *DocenteController) DocumentoDocenteVinculacion() {
 // @router /nombre [get]
 func (c *DocenteController) NombreDocenteVinculacion() {
 	defer errorhandler.HandlePanic(&c.Controller)
+
+	nombre := c.GetString("nombre")
+	vinculacion, errvin := c.GetInt64("vinculacion")
+
+	if errvin != nil {
+		logs.Error(errvin)
+		c.Data["json"] = requestmanager.APIResponseDTO(false, 400, nil, "Error: Parametro(s) nó valido(s) o faltante(s)")
+		c.Ctx.Output.SetStatus(400)
+	} else if nombre == "" || vinculacion <= 0 {
+		logs.Error(nombre, vinculacion)
+		c.Data["json"] = requestmanager.APIResponseDTO(false, 400, nil, "Error: Parametro(s) Valores nó validos")
+		c.Ctx.Output.SetStatus(400)
+	} else {
+		resultado := services.ListaDocentesxNombreVinculacion(nombre, vinculacion)
+		c.Data["json"] = resultado
+		c.Ctx.Output.SetStatus(resultado.Status)
+	}
 
 	c.ServeJSON()
 }
